// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-button renders 1`] = `
<ecl-button variant="primary">
  <!---->
  <button class="ecl-button ecl-button--primary" type="submit">
    <span class="ecl-button__container">
      <span class="ecl-button__label" data-ecl-label>
        Button label
      </span>
    </span>
  </button>
</ecl-button>
`;

exports[`ecl-button renders correctly with an icon after 1`] = `
<ecl-button variant="primary">
  <!---->
  <button class="ecl-button ecl-button--primary" type="submit">
    <span class="ecl-button__container">
      <span class="ecl-button__label" data-ecl-label>
        Button label
      </span>
      <ecl-icon icon="check" slot="icon-after">
        <span class="ecl-button__icon ecl-icon ecl-icon--xs sc-ecl-button-ec wt-icon--check wt-icon--placeholder"></span>
      </ecl-icon>
    </span>
  </button>
</ecl-button>
`;

exports[`ecl-button renders correctly with an icon before 1`] = `
<ecl-button variant="tertiary">
  <!---->
  <button class="ecl-button ecl-button--tertiary" type="submit">
    <span class="ecl-button__container">
      <ecl-icon icon="check" slot="icon-before">
        <span class="ecl-button__icon ecl-icon ecl-icon--xs sc-ecl-button-ec wt-icon--check wt-icon--placeholder"></span>
      </ecl-icon>
      <span class="ecl-button__label" data-ecl-label>
        Button label
      </span>
    </span>
  </button>
</ecl-button>
`;

exports[`ecl-button renders correctly with an indicator 1`] = `
<ecl-button indicator="true" indicator-label="label for screen readers" indicator-value="5" variant="secondary">
  <!---->
  <button class="ecl-button ecl-button--secondary" type="submit">
    <span class="ecl-button__container">
      <span class="ecl-button__label" data-ecl-label>
        Button label
      </span>
      <span class="ecl-button__icon-container">
        <ecl-icon icon="check" slot="icon-after">
          <span class="ecl-button__icon ecl-icon ecl-icon--xs sc-ecl-button-ec wt-icon--check wt-icon--placeholder"></span>
        </ecl-icon>
        <ecl-indicator>
          <span class="ecl-indicator" data-ecl-auto-initialized="true" data-ecl-indicator>
            <span class="ecl-indicator__value">
              5
            </span>
          </span>
        </ecl-indicator>
      </span>
    </span>
  </button>
</ecl-button>
`;

exports[`ecl-button renders correctly with small size 1`] = `
<ecl-button 's',="" size:="" variant="primary">
  <!---->
  <button class="ecl-button ecl-button--primary" type="submit">
    <span class="ecl-button__container">
      <span class="ecl-button__label" data-ecl-label>
        Button label
      </span>
    </span>
  </button>
</ecl-button>
`;
